kube/ckad/chapter-7/nginx-allow-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-port
spec: 
  podSelector: 
    matchLabels: 
      app: backend-api
      role: api
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          app: frontend
          role: ui
    ports:
    - port: 80
      protocol: TCP
